--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,9 @@ $color_blue: #07111d;
 @import '__null';
 @import '__header';
 @import '__home';
+
+@import '__burial';
+@import '__cremation';
+
+
 @import '__footer';
