--- a/css/style.css
+++ b/css/style.css
@@ -610,3 +610,117 @@ body.active {
 .main {
   margin: 0px 0px 10000px 0px;
 }
+
+.heder-page {
+  width: 100%;
+  position: relative;
+}
+
+.heder-page_margin {
+  margin: 0px 0px 40px 0px;
+}
+
+.heder-page__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #fff;
+  font-family: "Yeseva One";
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+@media (max-width: 1910px) {
+  .heder-page__title {
+    font-size: calc(27px + 13 * (100vw - 750px) / 1180);
+  }
+}
+
+@media (max-width: 750px) {
+  .heder-page__title {
+    font-size: 27px;
+  }
+}
+
+.heder-page__img {
+  padding: 0px 0px 12em 0px;
+}
+
+.heder-page__img::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.342);
+}
+
+.heder-page__img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.text-page {
+  font-family: 'Montserrat';
+  font-size: 17px;
+  line-height: 180%;
+  font-weight: 500;
+  color: #5B5B5B;
+  margin-bottom: 40px;
+}
+
+.text-page_margin {
+  margin: 0px 20px 0px 20px;
+}
+
+.text-img {
+  margin-bottom: 40px;
+}
+
+.text-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.text-title {
+  font-family: 'Montserrat';
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #ba9f5a;
+  margin-bottom: 20px;
+}
+
+.text-title_margin {
+  margin: 0px 20px 0px 20px;
+}
+
+.text__line {
+  position: relative;
+  margin: 0px 0px 15px 17px;
+}
+
+.text__line::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: -17px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ba9f5a;
+}
