--- a/css/style.css
+++ b/css/style.css
@@ -607,6 +607,212 @@ body.active {
           flex: 1 1 auto;
 }
 
+.box-prais {
+  padding: 20px 40px 20px 40px;
+  background: #636363 url(../img/home/texture.jpg);
+}
+
+.prais {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.prais__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 32%;
+          flex: 0 1 32%;
+}
+
+@media (max-width: 1200px) {
+  .prais__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 40%;
+            flex: 0 1 40%;
+    margin: 0px 0px 20px 0px;
+  }
+}
+
+@media (max-width: 825px) {
+  .prais__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 70%;
+            flex: 0 1 70%;
+  }
+}
+
+.prais-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 360px;
+  height: 100%;
+  background-color: #fff;
+}
+
+.prais-list__heder {
+  width: 100%;
+  padding: 10px 10px 10px 10px;
+  background-color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+.prais-list__title {
+  font-family: 'Montserrat';
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+}
+
+@media (max-width: 1910px) {
+  .prais-list__title {
+    font-size: calc(24px + 3 * (100vw - 750px) / 1180);
+  }
+}
+
+@media (max-width: 750px) {
+  .prais-list__title {
+    font-size: 24px;
+  }
+}
+
+.prais-list__sub-title {
+  font-family: 'Montserrat';
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+}
+
+@media (max-width: 1910px) {
+  .prais-list__sub-title {
+    font-size: calc(11px + 3 * (100vw - 750px) / 1180);
+  }
+}
+
+@media (max-width: 750px) {
+  .prais-list__sub-title {
+    font-size: 11px;
+  }
+}
+
+.prais-list__pay {
+  margin: 0px 0px 10px 0px;
+  padding: 0px 10px 0px 10px;
+}
+
+.prais-list__byn {
+  font-family: 'Montserrat';
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 700;
+  color: #5B5B5B;
+  text-align: center;
+}
+
+.prais-list__byn span {
+  font-family: 'Montserrat';
+  font-size: 17px;
+  line-height: 140%;
+  font-weight: 700;
+  color: #5B5B5B;
+  text-align: center;
+}
+
+.prais-list__byn-sub {
+  font-family: 'Montserrat';
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 700;
+  color: #5B5B5B;
+  text-align: center;
+}
+
+.prais-list__list {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 0px 0px 20px 0px;
+  padding: 0px 10px 0px 10px;
+}
+
+.prais-list__line {
+  font-family: 'Montserrat';
+  font-size: 17px;
+  line-height: 140%;
+  font-weight: 400;
+  color: #5B5B5B;
+  text-align: center;
+  padding: 10px 20px 10px 20px;
+  border-bottom: #ccc 1px solid;
+}
+
+@media (max-width: 1910px) {
+  .prais-list__line {
+    font-size: calc(14px + 3 * (100vw - 750px) / 1180);
+  }
+}
+
+@media (max-width: 750px) {
+  .prais-list__line {
+    font-size: 14px;
+  }
+}
+
+.prais-list__line span {
+  position: relative;
+}
+
+.prais-list__line span::before {
+  content: '';
+  position: absolute;
+  top: 7px;
+  left: -15px;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: #ba9f5a;
+}
+
+.prais-list__button {
+  font-family: 'Montserrat';
+  font-size: 17px;
+  line-height: 140%;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  padding: 7px 20px 7px 20px;
+  background-color: #ba9f5a;
+  border-radius: 3px;
+  margin: 0px 0px 20px 0px;
+}
+
+.prais-list__ps {
+  font-family: 'Montserrat';
+  font-size: 15px;
+  line-height: 140%;
+  font-weight: 400;
+  color: #5B5B5B;
+  text-align: center;
+  margin: 0px 10px 10px 10px;
+}
+
 .heder-page {
   width: 100%;
   position: relative;
