--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,10 +4,11 @@ $color_blue: #07111d;
 
 @import '__null';
 @import '__header';
-@import '__home';
+@import '__main';
 
 @import '__burial';
 @import '__cremation';
 
 
 @import '__footer';
+
