--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ body.active {
     transition: all 0.2s ease;
   }
   .header__line.active {
-    height: 100%;
+    height: auto;
     padding: 15px 0px 15px 20px;
     border-bottom: #fff 1px solid;
   }
@@ -646,7 +646,7 @@ body.active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 40px 0px;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -726,13 +726,13 @@ body.active {
 
 @media (max-width: 1910px) {
   .box-text__span::before {
-    font-size: calc(16px + 14 * (100vw - 375px) / 1535);
+    font-size: calc(17px + 13 * (100vw - 375px) / 1535);
   }
 }
 
 @media (max-width: 375px) {
   .box-text__span::before {
-    font-size: 14px;
+    font-size: 17px;
   }
 }
 
@@ -765,7 +765,7 @@ body.active {
       flex-wrap: wrap;
   -webkit-column-gap: 20px;
           column-gap: 20px;
-  row-gap: 20px;
+  row-gap: 40px;
   max-width: 1200px;
   margin: -200px auto 20px auto;
 }
@@ -817,7 +817,7 @@ body.active {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-width: 370px;
+  max-width: 400px;
   min-width: 300px;
 }
 
@@ -879,7 +879,7 @@ body.active {
   font-weight: 500;
   color: #5B5B5B;
   text-align: center;
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 30px 0px;
 }
 
 .cart__botton {
@@ -1016,7 +1016,7 @@ body.active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 40px 0px;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -1132,11 +1132,406 @@ body.active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto 40px auto;
+}
+
+.age-17__item-1 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 25%;
+          flex: 0 1 25%;
+}
+
+@media (max-width: 900px) {
+  .age-17__item-1 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 35%;
+            flex: 0 1 35%;
+  }
+}
+
+@media (max-width: 700px) {
+  .age-17__item-1 {
+    display: none;
+  }
+}
+
+.age-17__img-1 img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin: 20px 0px 0px 50px;
+}
+
+@media (max-width: 900px) {
+  .age-17__img-1 img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 35%;
+            flex: 0 1 35%;
+    margin: 0;
+  }
+}
+
+.age-17__title-1 {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: 600;
+  text-align: center;
+  color: #ba9f5a;
+}
+
+@media (max-width: 1910px) {
+  .age-17__title-1 {
+    font-size: calc(30px + 15 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__title-1 {
+    font-size: 30px;
+  }
+}
+
+.age-17__sub-title-1 {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 600;
+  text-align: center;
+  color: #5B5B5B;
+}
+
+.age-17__item-2 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+}
+
+@media (max-width: 900px) {
+  .age-17__item-2 {
+    display: none;
+  }
+}
+
+.age-17__img-2 img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.age-17__item-3 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 45%;
+          flex: 0 1 45%;
+  padding: 0px 10px 0px 20px;
+}
+
+@media (max-width: 900px) {
+  .age-17__item-3 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 65%;
+            flex: 0 1 65%;
+  }
+}
+
+@media (max-width: 700px) {
+  .age-17__item-3 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin: 0px 0px 20px 0px;
+  }
+}
+
+.age-17__title-3 {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 24px;
+  line-height: 140%;
+  font-weight: 600;
+  color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+.age-17__sub-title-3 {
+  font-family: "Yeseva One";
+  font-size: 24px;
+  line-height: 120%;
+  color: #000;
+  margin: 0px 0px 10px 0px;
+}
+
+.age-17__line {
+  width: 40%;
+  height: 3px;
+  background-color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+.age-17__text-3 {
+  font-family: 'Montserrat';
+  font-size: 17px;
+  line-height: 140%;
+  font-weight: 400;
+  color: #5B5B5B;
+  margin: 0px 0px 20px 0px;
+}
+
+.age-17__box-2040 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.age-17__left {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 1120px) {
+  .age-17__left {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.age-17__2040 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+@media (max-width: 700px) {
+  .age-17__2040 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 33%;
+            flex: 0 1 33%;
+  }
+}
+
+.age-17__2040-title {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: 600;
+  text-align: center;
+  color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 1910px) {
+  .age-17__2040-title {
+    font-size: calc(30px + 20 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__2040-title {
+    font-size: 25px;
+  }
+}
+
+.age-17__2040-text {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 600;
+  text-align: center;
+  color: #5B5B5B;
+}
+
+@media (max-width: 1910px) {
+  .age-17__2040-text {
+    font-size: calc(11px + 3 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__2040-text {
+    font-size: 11px;
+  }
+}
+
+.age-17__1420 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+@media (max-width: 700px) {
+  .age-17__1420 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 33%;
+            flex: 0 1 33%;
+  }
+}
+
+.age-17__1420-title {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: 600;
+  text-align: center;
+  color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 1910px) {
+  .age-17__1420-title {
+    font-size: calc(30px + 20 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__1420-title {
+    font-size: 25px;
+  }
+}
+
+.age-17__1420-text {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 600;
+  text-align: center;
+  color: #5B5B5B;
+}
+
+@media (max-width: 1910px) {
+  .age-17__1420-text {
+    font-size: calc(11px + 3 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__1420-text {
+    font-size: 11px;
+  }
+}
+
+.age-17__none-17 {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .age-17__none-17 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 33%;
+            flex: 0 1 33%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.age-17__none-title {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: 600;
+  text-align: center;
+  color: #ba9f5a;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 1910px) {
+  .age-17__none-title {
+    font-size: calc(30px + 20 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__none-title {
+    font-size: 25px;
+  }
+}
+
+.age-17__none-text {
+  font-family: 'Montserrat';
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 140%;
+  font-weight: 600;
+  text-align: center;
+  color: #5B5B5B;
+}
+
+@media (max-width: 1910px) {
+  .age-17__none-text {
+    font-size: calc(11px + 3 * (100vw - 375px) / 1535);
+  }
+}
+
+@media (max-width: 375px) {
+  .age-17__none-text {
+    font-size: 11px;
+  }
+}
+
+.age-17__right {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+@media (max-width: 1120px) {
+  .age-17__right {
+    display: none;
+  }
+}
+
+.age-17__right-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .box-prais {
