--- a/css/style.css
+++ b/css/style.css
@@ -401,8 +401,9 @@ body.active {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     position: absolute;
     top: 50px;
     left: 0;
@@ -429,7 +430,7 @@ body.active {
     transition: all 0.2s ease;
   }
   .header__line.active {
-    height: auto;
+    height: 100%;
     padding: 15px 0px 15px 20px;
     border-bottom: #fff 1px solid;
   }
