--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -217,7 +217,8 @@ body{
         
         @media (max-width: 1020px){
             flex-direction: column;
-            flex-wrap: wrap;
+            justify-content: space-between;
+            //flex-wrap: wrap;
             
             position: absolute;
             top: 50px;
@@ -230,7 +231,6 @@ body{
             
             &.fix-burger{
                 position: fixed;
-                
             }
         }
     }
@@ -239,6 +239,7 @@ body{
         position: relative;
         
         @media (max-width: 1020px){
+
             height: 0px;
             padding: 0px;
             border-bottom: #ccc 0px solid;
@@ -246,7 +247,7 @@ body{
             transition:all 0.2s ease;
 
             &.active{
-                height: auto;
+                height: 100%;
                 padding: 15px 0px 15px 20px;
                 border-bottom: #fff 1px solid;
                 &.active-sub{
