--- a/scss/__burial.scss
+++ b/scss/__burial.scss
@@ -2,6 +2,11 @@ $color_golg: #ba9f5a;
 $color_text: #5B5B5B;
 $color_blue: #07111d;
 
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .heder-page {
     width: 100%;
 
