--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,11 @@ $color_blue: #07111d;
 @import '__null';
 @import '__header';
 @import '__main';
-
 @import '__burial';
 @import '__cremation';
+@import '__ritual-agent';
+@import '__shop-coffins';
+
 
 
 @import '__footer';
