--- a/css/style.css
+++ b/css/style.css
@@ -1731,6 +1731,11 @@ body.active {
   margin: 0px 10px 10px 10px;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .heder-page {
   width: 100%;
   position: relative;
@@ -1843,6 +1848,280 @@ body.active {
   height: 10px;
   border-radius: 50%;
   background-color: #ba9f5a;
+}
+
+._align {
+  text-align: center;
+}
+
+.tel-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 400px;
+  margin: 0px auto 20px auto;
+}
+
+.tel-contacts__a1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px 0px 20px 0px;
+}
+
+.tel-contacts__picture {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.tel-contacts__a1-img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 20%;
+          flex: 0 1 20%;
+}
+
+.tel-contacts__a1-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 50%;
+  height: 50%;
+}
+
+.tel-contacts__a1-tel {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 80%;
+          flex: 0 1 80%;
+  font-family: 'Montserrat';
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #5B5B5B;
+  text-align: center;
+}
+
+.tel-contacts__mts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px 0px 10px 0px;
+}
+
+.tel-contacts__mts-img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 20%;
+          flex: 0 1 20%;
+}
+
+.tel-contacts__mts-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 50%;
+  height: 50%;
+}
+
+.tel-contacts__mts-tel {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 80%;
+          flex: 0 1 80%;
+  font-family: 'Montserrat';
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #5B5B5B;
+  text-align: center;
+}
+
+.tel-contacts__clock {
+  font-family: 'Montserrat';
+  font-size: 27px;
+  line-height: 140%;
+  font-weight: 600;
+  color: #ba9f5a;
+  text-align: center;
+}
+
+.shop {
+  padding: 0px 10px 0px 10px;
+}
+
+.card {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 360px;
+  min-width: 250px;
+  height: 100%;
+}
+
+.card__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+  border: #5b5b5b42 3px solid;
+  border-radius: 10px;
+  padding: 0px 0px 10px 0px;
+  overflow: hidden;
+}
+
+.card__title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Montserrat';
+  font-size: 16px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px 5px 10px 5px;
+  background-color: #ba9f5a;
+}
+
+@media (max-width: 1910px) {
+  .card__title {
+    font-size: calc(14px + 2 * (100vw - 750px) / 1180);
+  }
+}
+
+@media (max-width: 750px) {
+  .card__title {
+    font-size: 14px;
+  }
+}
+
+.card__img {
+  position: relative;
+  width: 100%;
+  padding: 0px 0px 80% 0px;
+}
+
+.card__img img {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  padding: 0px 10px 0px 10px;
+}
+
+.card__prais {
+  font-family: 'Montserrat';
+  font-size: 20px;
+  line-height: 140%;
+  font-weight: 500;
+  color: #ba9f5a;
+  text-align: center;
+  margin: 0px 0px 10px 0px;
+}
+
+.card__button {
+  font-family: 'Montserrat';
+  font-size: 20px;
+  line-height: 140%;
+  font-weight: 400;
+  color: #fff;
+  background-color: #ba9f5a;
+  text-align: center;
+  padding: 10px 0px 10px 0px;
+  margin: 0px 20px 0px 20px;
+  border-radius: 7px;
+}
+
+.shop-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  row-gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto 20px auto;
+}
+
+.shop-block_one {
+  row-gap: 0px;
+}
+
+.shop-block__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33%;
+          flex: 0 1 33%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 800px) {
+  .shop-block__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+}
+
+.attention {
+  margin: 0 auto 40px auto;
+  max-width: 1200px;
+  border: #ba9f5a 3px solid;
+  border-radius: 5px;
+}
+
+.attention__text {
+  font-family: 'Montserrat';
+  font-size: 14px;
+  line-height: 180%;
+  font-weight: 600;
+  color: #5B5B5B;
+  text-align: center;
+  padding: 20px 10px 20px 10px;
 }
 
 .footer {
